force-app/main/default/objects/WorkItem__c/WorkItem__c.object-meta.xml
<CustomObject>
    <label>User Story</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>