force-app/main/default/objects/WorkItem__c/fields/Afin_de__c.field-meta.xml
<CustomField>
    <fullName>Afin_de__c</fullName>
    <label>Afin de</label>
    <length>255</length>
    <type>Text</type>
</CustomField>