force-app/main/default/objects/WorkItem__c/fields/En_tant_que__c.field-meta.xml
<CustomField>
    <fullName>En_tant_que__c</fullName>
    <label>En tant que</label>
    <length>40</length>
    <type>Text</type>
</CustomField>