force-app/main/default/objects/WorkItem__c/fields/ImpactedUS__c.field-meta.xml
<CustomField>
    <fullName>ImpactedUS__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Impacted User Story</label>
    <referenceTo>WorkItem__c</referenceTo>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>