force-app/main/default/objects/WorkItem__c/fields/Je_veux__c.field-meta.xml
<CustomField>
    <fullName>Je_veux__c</fullName>
    <label>Je veux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>