force-app/main/default/objects/WorkItem__c/fields/Modification_suite_cadrage__c.field-meta.xml
<CustomField>
    <fullName>Modification_suite_cadrage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modification suite cadrage</label>
    <type>Checkbox</type>
</CustomField>