force-app/main/default/objects/WorkItem__c/fields/Numero_de_Process__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Process__c</fullName>
    <label>Numéro de Process</label>
    <length>50</length>
    <type>Text</type>
</CustomField>