force-app/main/default/objects/WorkItem__c/fields/Numero_US_Cadrage__c.field-meta.xml
<CustomField>
    <fullName>Numero_US_Cadrage__c</fullName>
    <label>Numéro US Cadrage</label>
    <length>10</length>
    <type>Text</type>
</CustomField>