force-app/main/default/objects/WorkItem__c/fields/Origine_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Origine_User_Story__c</fullName>
    <defaultValue>&apos;Design&apos;</defaultValue>
    <label>Origine User Story</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cadrage</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>