force-app/main/default/objects/WorkItem__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <color>#000000</color>
                <label>⚫ Critical</label>
            </value>
            <value>
                <fullName>High</fullName>
                <color>#CC0000</color>
                <default>true</default>
                <label>🔴 Haute</label>
            </value>
            <value>
                <fullName>Normal</fullName>
                <color>#FFFF66</color>
                <label>🟡 Normale</label>
            </value>
            <value>
                <fullName>Nice To Have</fullName>
                <color>#009900</color>
                <label>🟢 Nice To Have</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>