force-app/main/default/objects/WorkItem__c/fields/Produit_Infinity_concern__c.field-meta.xml
<CustomField>
    <fullName>Produit_Infinity_concern__c</fullName>
    <label>Produit(s) Infinity concerné(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail Media OnSite</fullName>
            </value>
            <value>
                <fullName>Extension d&apos;audience</fullName>
            </value>
            <value>
                <fullName>Promogaming</fullName>
            </value>
            <value>
                <fullName>Promotion personnalisée</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Tous les produits</fullName>
                <default>true</default>
                <label>Tous les produits</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>