force-app/main/default/objects/WorkItem__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>🆕 New</label>
            </value>
            <value>
                <fullName>Specified</fullName>
                <label>✍ Specified</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <label>🔄 In Progress</label>
            </value>
            <value>
                <fullName>Ready for unit test</fullName>
                <label>🟨 Ready for Unit Test</label>
            </value>
            <value>
                <fullName>Validated - Unit Test</fullName>
                <label>💛 Validated - Unit Test</label>
            </value>
            <value>
                <fullName>Test failed - Unit Test</fullName>
                <label>❌ Test failed - Unit Test</label>
            </value>
            <value>
                <fullName>Ready For UAT Test</fullName>
                <label>🟨 Ready For UAT Test</label>
            </value>
            <value>
                <fullName>Validated - UAT</fullName>
                <label>💛 Validated - UAT</label>
            </value>
            <value>
                <fullName>Test Failed - UAT Test</fullName>
                <label>❌ Test Failed - UAT Test</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <label>✅ Closed</label>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <label>❎ Cancelled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>