force-app/main/default/objects/WorkItem__c/fields/TargetRelease__c.field-meta.xml
<CustomField>
    <fullName>TargetRelease__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Release</label>
    <referenceTo>Release__c</referenceTo>
    <relationshipName>WorkItems</relationshipName>
    <type>Lookup</type>
</CustomField>