force-app/main/default/objects/WorkItem__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Gestion des campagnes</fullName>
                <default>true</default>
                <label>Gestion des campagnes</label>
            </value>
            <value>
                <fullName>Gestion de la facturation</fullName>
            </value>
            <value>
                <fullName>Gestion des opportunités</fullName>
            </value>
            <value>
                <fullName>Organisation</fullName>
            </value>
            <value>
                <fullName>Report &amp; Dashboard</fullName>
            </value>
            <value>
                <fullName>Connaissance Client</fullName>
            </value>
            <value>
                <fullName>Gestion des produits d&apos;oppportunité</fullName>
            </value>
            <value>
                <fullName>Gestion des tâches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>