force-app/main/default/objects/WorkItem__c/recordTypes/Defect.recordType-meta.xml
<RecordType>
    <fullName>Defect</fullName>
    <active>true</active>
    <description>Must be formalized with steps to Reproduce the issue, expected results according to specification and actual results.</description>
    <label>Defect</label>
</RecordType>