force-app/main/default/objects/WorkItem__c/listViews/User_Stories_Design.listView-meta.xml
<ListView>
    <fullName>User_Stories_Design</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Topic__c</columns>
    <columns>En_tant_que__c</columns>
    <columns>Je_veux__c</columns>
    <columns>Afin_de__c</columns>
    <columns>Commentaires__c</columns>
    <columns>Origine_User_Story__c</columns>
    <columns>TotalWorkloadDays__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Origine_User_Story__c</field>
        <operation>equals</operation>
        <value>Design</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WorkItem__c.UserStory</value>
    </filters>
    <label>User Stories - Design</label>
</ListView>