force-app/main/default/objects/WorkItem__c/listViews/UserStory.listView-meta.xml
<ListView>
    <fullName>UserStory</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WorkItem__c.UserStory</value>
    </filters>
    <label>User Stories</label>
</ListView>